--- a/index.html
+++ b/index.html
@@ -492,12 +492,12 @@
             </section>
             <!--------------------[END] Contact----------------------------->
             <!--------------------[START] Footer---------------------------->
-            <section class="colorlib-footer no-print" data-section="footer">
+            <!-- <section class="colorlib-footer no-print" data-section="footer">
                <div class="colorlib-narrow-content">
                   <footer class="footer" id="footer">
                   </footer>
                </div>
-            </section>
+            </section> -->
             <!--------------------[END] Footer------------------------------>
          </div>
          <!-----[END] Main Page--------->
