--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="portfolio,website,personal website,github,projects,computer science and engineering" />
    <meta name="author" content="Elizabeth Chien" />
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <link rel="icon" type="image/png" href="/images/logo.png">
+   <link rel="icon" href="images/favicon.ico" type="image/x-icon" / >
    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
@@ -426,7 +426,7 @@
                               <h2>Chunghwa Telecom<span>Jan. 2024 – Feb. 2024</span></h2>
                               <span class="timeline-sublabel">Infrastructure Design Intern</span>
                               <p class="timeline-text">▪ Analyzed network attacks, traced network data packets, and prepared traffic analysis reports using HTML, Flask, and Bootstrap at Taiwan’s largest telecommunications company.</p>
-                              <p class="timeline-text">▪ Developed a traffic anomaly detection system aimed at monitoring network attacks and preventing data leaks.</p>>
+                              <p class="timeline-text">▪ Developed a traffic anomaly detection system aimed at monitoring network attacks and preventing data leaks.</p>
                               <div>
                                  <span class="badge badge-secondary">HTML</span>
                                  <span class="badge badge-secondary">CSS</span>
@@ -492,20 +492,12 @@
             </section>
             <!--------------------[END] Contact----------------------------->
             <!--------------------[START] Footer---------------------------->
-<<<<<<< HEAD
-            <!-- <section class="colorlib-footer no-print" data-section="footer">
-=======
             <section class="colorlib-footer no-print" data-section="footer">
->>>>>>> 557281c (first)
                <div class="colorlib-narrow-content">
                   <footer class="footer" id="footer">
                   </footer>
                </div>
-<<<<<<< HEAD
-            </section> -->
-=======
             </section>
->>>>>>> 557281c (first)
             <!--------------------[END] Footer------------------------------>
          </div>
          <!-----[END] Main Page--------->
