added:CNN video

--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
                                           </p>
                                           <br>
                                           <div>
-                                             <!-- <div class="video-container">
-                                                <iframe src="https://www.youtube.com/embed/SQHtCkBnB9c?si=dQm6QpyeNCgx06OY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
-                                             </div> -->
+                                             <div class="video-container">
+                                                <iframe src="https://www.youtube.com/embed/lnvBihYIx64?si=iCZ9CqTP5p-m3G_d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                             </div>
                                              <br>
                                              <span class="badge badge-secondary">System Verilog</span>
                                              <span class="badge badge-secondary">Visual Base</span>
