Update education info

--- a/index.html
+++ b/index.html
@@ -458,6 +458,21 @@
                      <article class="timeline-entry animate-box fadeInUp animated">
                         <div class="timeline-entry-inner">
                            <div class="timeline-label">
+                              <h2>Master of Computer Science
+                                 <span>Aug. 2025 – May. 2027(expeted)</span>
+                              </h2>
+                              <span class="timeline-sublabel">University of Illinois Urbana-Champaign</span>
+                              <div>
+                                 <span class="badge badge-secondary">Applied Machien Learning</span>
+                                 <span class="badge badge-secondary">Robot Manipulation</span>
+                                 <span class="badge badge-secondary">Natural language processing</span>
+                              </div>
+                           </div>
+                        </div>
+                     </article>
+                     <article class="timeline-entry animate-box fadeInUp animated">
+                        <div class="timeline-entry-inner">
+                           <div class="timeline-label">
                               <h2>Bachelor of Science in Computer Science and Engineering
                                  <span>Sept. 2021 – Jun. 2025</span>
                               </h2>
@@ -474,6 +489,7 @@
                            </div>
                         </div>
                      </article>
+                     <article class="timeline-entry begin animate-box fadeInUp animated"><div class="timeline-entry-inner"><div class="timeline-icon color-2"></div></div></article></div>
                   </div>
                </div>
             </section>
