Update contact info

--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
                   <div class="timeline-centered" id="education">
                      <article class="timeline-entry animate-box fadeInUp animated">
                         <div class="timeline-entry-inner">
+                           <div class="timeline-icon color-2"></div>
                            <div class="timeline-label">
                               <h2>Master of Computer Science
                                  <span>Aug. 2025 – May. 2027(expeted)</span>
@@ -472,6 +473,7 @@
                      </article>
                      <article class="timeline-entry animate-box fadeInUp animated">
                         <div class="timeline-entry-inner">
+                           <div class="timeline-icon color-2"></div>
                            <div class="timeline-label">
                               <h2>Bachelor of Science in Computer Science and Engineering
                                  <span>Sept. 2021 – Jun. 2025</span>
@@ -501,7 +503,7 @@
                      <div class="about-desc">
                         <h1>Contact</h1>
                      </div>
-                     <p>Feel free to email me at elizabeth.j.l.chien@gmail.com!
+                     <p>Feel free to email me at ec45@illinois.edu!
                      </p>
                   </div>
                </div>
