--- a/index.html
+++ b/index.html
@@ -447,54 +447,61 @@
             <!--------------------[END] Work Experience--------------------->
             <!--------------------[START] Education------------------------->
             <section class="colorlib-education" data-section="education">
-               <div class="colorlib-narrow-content">
-                  <div class="row row-bottom-padded-sm animate-box fadeInLeft animated"
-                     data-animate-effect="fadeInLeft">
-                     <div class="about-desc">
-                        <h1>Education</h1>
-                     </div>
-                  </div>
-                  <div class="timeline-centered" id="education">
-                     <article class="timeline-entry animate-box fadeInUp animated">
-                        <div class="timeline-entry-inner">
-                           <div class="timeline-icon color-2"></div>
-                           <div class="timeline-label">
-                              <h2>Master of Computer Science
-                                 <span>Aug. 2025 – May. 2027(expeted)</span>
-                              </h2>
-                              <span class="timeline-sublabel">University of Illinois Urbana-Champaign</span>
-                              <div>
-                                 <span class="badge badge-secondary">Applied Machien Learning</span>
-                                 <span class="badge badge-secondary">Robot Manipulation</span>
-                                 <span class="badge badge-secondary">Natural language processing</span>
-                              </div>
-                           </div>
-                        </div>
-                     </article>
-                     <article class="timeline-entry animate-box fadeInUp animated">
-                        <div class="timeline-entry-inner">
-                           <div class="timeline-icon color-2"></div>
-                           <div class="timeline-label">
-                              <h2>Bachelor of Science in Computer Science and Engineering
-                                 <span>Sept. 2021 – Jun. 2025</span>
-                              </h2>
-                              <span class="timeline-sublabel">National Taiwan Ocean University</span>
-                              <div>
-                                 <span class="badge badge-secondary">Data Structures</span>
-                                 <span class="badge badge-secondary">Algorithms</span>
-                                 <span class="badge badge-secondary">Operating Systems</span>
-                                 <span class="badge badge-secondary">Database Management System</span>
-                                 <span class="badge badge-secondary">Computer Networks</span>
-                                 <span class="badge badge-secondary">Digital Logic</span>
-                                 <span class="badge badge-secondary">Computer Organization</span>
-                              </div>
-                           </div>
-                        </div>
-                     </article>
-                     <article class="timeline-entry begin animate-box fadeInUp animated"><div class="timeline-entry-inner"><div class="timeline-icon color-2"></div></div></article></div>
+   <div class="colorlib-narrow-content">
+      <div class="row row-bottom-padded-sm animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
+         <div class="about-desc">
+            <h1>Education</h1>
+         </div>
+      </div>
+      <div class="timeline-centered" id="education">
+         
+         <!-- Master -->
+         <article class="timeline-entry animate-box fadeInUp animated">
+            <div class="timeline-entry-inner">
+               <div class="timeline-icon color-2"></div>
+               <div class="timeline-label">
+                  <h2>Master of Computer Science <span>Aug. 2025 – May. 2027 (Expected)</span></h2>
+                  <span class="timeline-sublabel">University of Illinois at Urbana-Champaign</span>
+                  <div>
+                     <span class="badge badge-secondary">Applied Machine Learning</span>
+                     <span class="badge badge-secondary">Robot Manipulation</span>
+                     <span class="badge badge-secondary">Natural Language Processing</span>
                   </div>
                </div>
-            </section>
+            </div>
+         </article>
+
+         <!-- Bachelor -->
+         <article class="timeline-entry animate-box fadeInUp animated">
+            <div class="timeline-entry-inner">
+               <div class="timeline-icon color-2"></div>
+               <div class="timeline-label">
+                  <h2>Bachelor of Science in Computer Science and Engineering <span>Sept. 2021 – Jun. 2025</span></h2>
+                  <span class="timeline-sublabel">National Taiwan Ocean University</span>
+                  <div>
+                     <span class="badge badge-secondary">Data Structures</span>
+                     <span class="badge badge-secondary">Algorithms</span>
+                     <span class="badge badge-secondary">Operating Systems</span>
+                     <span class="badge badge-secondary">Database Management Systems</span>
+                     <span class="badge badge-secondary">Computer Networks</span>
+                     <span class="badge badge-secondary">Digital Logic</span>
+                     <span class="badge badge-secondary">Computer Organization</span>
+                  </div>
+               </div>
+            </div>
+         </article>
+
+         <!-- End of timeline -->
+         <article class="timeline-entry begin animate-box fadeInUp animated">
+            <div class="timeline-entry-inner">
+               <div class="timeline-icon color-2"></div>
+            </div>
+         </article>
+
+      </div>
+   </div>
+</section>
+
             <!--------------------[END] Education--------------------------->
             <!--------------------[START] Contact--------------------------->
             <section class="colorlib-contact" data-section="contact">
