--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
             <div class="timeline-entry-inner">
                <div class="timeline-icon color-2"></div>
                <div class="timeline-label">
-                  <h2>Master of Computer Science <span>Aug. 2025 – May. 2027 (Expected)</span></h2>
+                  <h2>Master of Computer Science <br><span>Aug. 2025 – May. 2027 (Expected)</span></h2>
                   <span class="timeline-sublabel">University of Illinois at Urbana-Champaign</span>
                   <div>
                      <span class="badge badge-secondary">Applied Machine Learning</span>
@@ -476,7 +476,7 @@
             <div class="timeline-entry-inner">
                <div class="timeline-icon color-2"></div>
                <div class="timeline-label">
-                  <h2>Bachelor of Science in Computer Science and Engineering <span>Sept. 2021 – Jun. 2025</span></h2>
+                  <h2>Bachelor of Science in Computer Science and Engineering <br><span>Sept. 2021 – Jun. 2025</span></h2>
                   <span class="timeline-sublabel">National Taiwan Ocean University</span>
                   <div>
                      <span class="badge badge-secondary">Data Structures</span>
